Bug 81892 - FILEOPEN: RTF import loses alignment of paragraph with page break
Summary: FILEOPEN: RTF import loses alignment of paragraph with page break
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.1.2 release
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:4.4.0 target:4.3.1
Keywords: bibisected, filter:rtf, regression
Depends on:
Blocks: Writer-Page-Break RTF-Paragraph
  Show dependency treegraph
 
Reported: 2014-07-30 03:38 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-10-22 21:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
trimmed down sample file (117.25 KB, application/zip)
2014-07-30 03:38 UTC, Yousuf Philips (jay) (retired)
Details
LibO 3.6.7 VS 4.3.1 (116.97 KB, image/png)
2014-07-30 03:43 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-07-30 03:38:14 UTC
Created attachment 103664 [details]
trimmed down sample file

After converting < http://www.microsoft.com/investor/reports/ar13/docs/2013_Annual_Report.docx > into an RTF file in word 2010, opening the RTF file in LibO 4.3.1 results in the alignment of the first line/paragraph on various pages is not retained.

Steps:
1) Open the attachment RTF

Expected: the first line of page 2 and 3 should be centered and the first paragraph of page 4 to be justified.

This is a regression as it didnt happen in 3.6.7.
Comment 1 Yousuf Philips (jay) (retired) 2014-07-30 03:43:55 UTC
Created attachment 103665 [details]
LibO 3.6.7 VS 4.3.1
Comment 2 Michael Stahl 2014-07-30 12:56:42 UTC
broken since 4.0.1 release,

regression from:

commit 94765a1b3f543b3b60f8c1de05048d12f2576be4
Author:     Miklos Vajna <vmiklos@suse.cz>
AuthorDate: Fri Feb 1 11:20:52 2013 +0100
Commit:     Michael Stahl <mstahl@redhat.com>
CommitDate: Tue Feb 5 20:49:55 2013 +0000

    fdo#48440 fix import of RTF_PAGE between text frames
Comment 3 Michael Stahl 2014-08-01 09:06:57 UTC
fixed on master
Comment 4 Commit Notification 2014-08-01 09:08:13 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=df041e468baf604f6e2606e5b632aa654b19a65d

fdo#81892: writerfilter: RTF import: add support for table row alignment



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-08-01 09:13:19 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bac3cdb1b8afd2fa8fdfea99d1d01dc2770d1ef1

fdo#81892: oops forgot the test document



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-08-01 16:09:05 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9294fd3f8630391f3b85031a345a53d066934a42&h=libreoffice-4-3

fdo#81892: writerfilter: RTF import: add support for table row alignment


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2014-08-04 11:07:12 UTC
oops - it looks like i mixed up the issue ids in the commit message - see bug 81893 for the commit that fixes this bug
Comment 8 Robinson Tryon (qubit) 2015-12-17 05:54:04 UTC Comment hidden (obsolete)
Comment 9 Robinson Tryon (qubit) 2015-12-17 12:38:39 UTC Comment hidden (obsolete)