fdo#81892: writerfilter: RTF import: add support for table row alignment

These keywords were simply not implemented.

(cherry picked from commit df041e468baf604f6e2606e5b632aa654b19a65d)

fdo#81892: oops forgot the test document
(cherry picked from commit bac3cdb1b8afd2fa8fdfea99d1d01dc2770d1ef1)

Change-Id: Ib4d07a4b2dfb07cfd56a4ee07d7c14d1c59323f9
Reviewed-on: https://gerrit.libreoffice.org/10674
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>